css/interface.css
.dbinterface__maincontainer {
    width: 100%;
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
    padding: 10px 0;
}

.dbinterface__db_selector,
.dbinterface__db_manager {
   height: 100%; 
}

.dbinterface__db_selector {
    border: 1px solid lightgray;
    flex-grow: 1;
    max-width: 200px;
    user-select: none;
    overflow-y: auto;
    overflow-x: hidden;
}

.dbinterface__db_selector ul > li.active {
    background-color: lightgray;
}

.dbinterface__db_manager {
    border: 1px solid lightgray;
    flex-grow: 4;
}

.dbinterface__logoimage {
    height: 20px;
    width: 20px;
}

.dbinterface__db_selector > #databases-list {
    padding: 0; margin: 0;
}

.dbinterface__db_selector > #databases-list li {
    padding: 5px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
    width: 100%;
}

.dbinterface__db_selector > #databases-list li > span {
    width: 80%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.dbinterface__db_selector > #databases-list li:hover {
    background-color: lightgray;
    cursor: pointer;
}

#dbinterface_tabsheader {
    width: 100%;
    height: var(--editor-tab-header-height);    
    border-bottom: 1px solid lightgray;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    user-select: none;
}

#dbinterface_tabsheader .tab_toggler {
    width: fit-content;
    height: 100%;
    padding: 10px;
    background-color: lightgray;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

#dbinterface_tabsheader .tab_toggler:not(.active):hover {
    cursor: pointer;
}

#dbinterface_tabsheader .tab_toggler i {
    height: fit-content;
    padding: 5px;
}

#dbinterface_tabsheader .tab_toggler.active {
    background-color: white;
    border-left: 1px solid gray;
    border-right: 1px solid gray;
}

#dbinterface_tabbody {
    width: 100%;
    height: calc(100% - var(--editor-tab-header-height));
}

#dbinterface_tabbody .tabs_body {
    width: 100%;
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 5px;
}

#dbinterface_tabbody .tabs_body > * {
    flex-grow: 1;
}

#dbinterface_tabbody .tabs_body:not(.active) {
    display: none;
}

.dbinterface__editor {
    width: 100%;
    resize: none;
    height: 100%;
    border: 0;
    padding: 10px;
    font-size: 1rem;
}

#dbinterface_popup {
    display: flex; justify-content: flex-start; align-items: flex-start; flex-direction: column;
}

#dbinterface_popup > span {
    padding: 5px;
    width: 100%;
}

#dbinterface_popup > span:hover {
    background-color: lightgray;
    cursor: pointer;
}

.editor__result_wrapper {
    width: 100%;
    height: 40vmin;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.editor__result_wrapper > div {
    background-color: white;
    height: 100%;
    overflow-y: auto;
}

.editor__result_wrapper > div:nth-of-type(1) {
    flex-grow: 2;
    max-width: 80%;
}

.editor__result_wrapper > div:nth-of-type(2) {
    flex-grow: 1;
}

.editor__result_wrapper > .editor__info > ul {
    width: 100%;
    height: 100%;
    overflow-y: auto;
    list-style: none;
    padding: 0;
    margin: 0;
}

.editor__result_wrapper > .editor__info > ul > li {
    width: 100%;
    padding: 5px 10px;
}

.editor__result_wrapper > .editor__info > ul > li:nth-of-type(2n) {
    background-color: lightgray;
}


/* Buttons */

[class|="btn"] {
    border: 0;
    padding: 10px;
    display: flex; justify-content: center; align-items: center; gap: 10px;
    border-radius: var(--app-border-radius);
}

[class|="btn"]:hover {
    cursor: pointer;
}

.btn-primary {
    background-color: var(--primary-bg-color);
    color: var(--primary-color);
}


/* Generic */

.pointer:hover { cursor: pointer; }
.d-none { display: none !important; }

/* Combobox */
.combobox {
    border: 1px solid lightgray;
    border-radius: var(--app-border-radius);
    padding: 5px;
    font-size: 1em;
}

.combobox:focus {
    outline: none;
}

/* Textarea */

textarea:focus {
    outline: none;
}

/* Grid */

table.grid {
    width: 100%;
    border-collapse: collapse;
    table-layout: fixed;
    user-select: none;
}

table.grid,
table.grid th,
table.grid tr,
table.grid td {
    border: 1px solid lightgray;
}

table.grid > thead {
    position: sticky;
    top: 0;
    background-color: white;
    border: 1px solid lightgray;
    top: 0;
}

table.grid > thead > tr > th,
table.grid > tbody > tr > td {
    padding: 5px 10px;
}

table.grid > tbody > tr:nth-of-type(2n) {
    background-color: lightgray;
}

table.grid > thead > tr > th {
    text-align: left;
}

table.grid > thead > tr > th:has(i) {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* Database info */
#info-list {
    padding: 5px 10px;
    list-style: none;
}

#info-list ul {
    padding: 0;
    list-style: none;
}

#info-list li span {
    font-weight: bold;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 5px;
}

#info-list li span:hover {
    cursor: pointer;
}

#info-list li li {
    padding: 5px 5px;
}

#info-list li li:hover {
    background-color: lightgray;
    cursor: pointer;
}

#info-list li {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

